--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,32 @@
-#teamMembersInline
-{
-    display: inline;
+#nav a{
+    color:black;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+#nav a:hover{
+    color: rgba(0, 0, 0, 0.452);
+}
+
+#nav a.active{
+    color: #000000;
+    text-decoration: underline;
+}
+
+#logo{
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+#line {
+    top: 50px;
+    height: 2px;
+    border-radius: 1px;
+    width: 100%;
+    margin: 0 1rem 1rem 1rem;
+    color: black;
+}
+
+div h2{
+    text-align: center;
 }
