--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,21 @@
-#nav a{
+body{
+    box-sizing: border-box;
+    display: block;
+    margin: 0px;
+    padding: 0px;
+}
+
+nav a{
     color:black;
     text-decoration: none;
     font-size: 15px;
 }
 
-#nav a:hover{
+nav a:hover{
     color: rgba(0, 0, 0, 0.452);
 }
 
-#nav a.active{
+nav a.active{
     color: #000000;
     text-decoration: underline;
 }
@@ -18,15 +25,7 @@
     margin-top: 10px;
 }
 
-#line {
-    top: 50px;
-    height: 2px;
-    border-radius: 1px;
-    width: 100%;
-    margin: 0 1rem 1rem 1rem;
-    color: black;
-}
-
 div h2{
     text-align: center;
+    position: relative;
 }
