--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 body{
-    box-sizing: border-box;
-    display: block;
-    margin: 0px;
-    padding: 0px;
+
+}
+
+nav{
+    color:black;
 }
 
 nav a{
-    color:black;
     text-decoration: none;
     font-size: 15px;
 }
@@ -25,7 +25,46 @@ nav a.active{
     margin-top: 10px;
 }
 
-div h2{
-    text-align: center;
+h1{
     position: relative;
+    width: 100%;
+    text-align: center;
+    margin: 2rem 0 2rem 0;
+}
+
+#title{
+    margin-bottom: 25rem;
+}
+
+h4{
+    padding-top: 4rem;
+}
+
+#what{
+    display: inline-flex;
+    top: 50px;
+}
+
+#what p{
+    margin-left: 1rem;
+}
+
+#what img{
+    margin-left: 2rem;
+}
+
+#how{
+    display: inline;
+}
+
+#how img{
+    margin-left: 6rem;
+}
+
+#how p span{
+    margin-left: 14rem;
+}
+
+#end{
+    margin-top: 4rem;
 }
